fixed minor bugs, implementing dark mode

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,12 @@
 
 body {
     height: 100vh;
-    background-color: #0093E9;
-    background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+    background: #36D1DC;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to top, #5B86E5, #36D1DC);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to top, #5B86E5, #36D1DC);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     font-family: 'Roboto', sans-serif;
 }
 
@@ -34,18 +38,24 @@ body {
 #weekdays>div {
     margin: 0px;
     width: 200px;
-    height: 200px;
+    height: 250px;
 }
 
 #container-bottom {
     color: black;
     margin-top: 50px;
-    margin-right: 100px;
-    margin-left: 100px;
+    margin-right: 200px;
+    margin-left: 200px;
     border: 1px solid white;
     border-radius: 10px;
     box-shadow: 0px 3px 15px 5px rgba(0, 0, 0, 0.27);
     background-color: white;
+}
+
+#container-bottom>#weekdays>div>h2,
+h3 {
+    font-weight: 200;
+    font-size: medium;
 }
 
 #weekdays {
@@ -53,9 +63,9 @@ body {
     margin: 0px;
 }
 
-#forecast-intro {
-    margin: 20px;
-    text-align: left;
+#forecast-intro>h1 {
+    margin: 30px;
+    text-align: center;
     display: block;
 }
 
@@ -66,13 +76,19 @@ body {
     justify-content: center;
 }
 
-#left-today-description > h1 {
+#left-today-description>h1 {
     text-align: left;
 }
 
-#left-today-description > p {
+#left-today-description>p {
     text-align: left;
 }
+
+#icon {
+    -webkit-filter: drop-shadow(5px 5px 5px rgba(0, 0, 0, 0.144));
+    filter: drop-shadow(5px 5px 5px rgba(0, 0, 0, 0.144));
+}
+
 
 /* Responsive layout - makes a one column layout instead of a two-column layout */
 @media (max-width: 800px) {
